Fix horizontal overflow on website

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ button {}
 }
 
 .center-text {
-    position: absolute;
+    position: relative;
     top: 50%;
     transform: translateY(-50%);
 }
